# ChatBot-Grad-Project

./: .gitignore  CLAUDE.md  PROJECT_DESCRIPTION_FOR_CLAUDE_MD.md  agent.py  api_server.py  chatbot_api.py  chatbot_connector.py  course_name_mapper.py  debug_box.py  degree_preference.py  eligibility.py  google_sheets_logger.py  gpa_service.py  language_service.py  lecture_service.py  llm_client.py  neo4j_course_functions.py  neo4j_track_functions.py  planning.py  planning_describtion.txt  planning_service.py  preference_service.py  preprocessor.py  pyproject.toml  rag_service.py  recommendation_service.py  student_functions.py  tools.py
