[project]
name = "projectv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "groq>=1.0.0",
    "gspread>=6.2.1",
    "huggingface-hub>=1.4.1",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.8",
    "loadenv>=0.1.1",
    "neo4j>=6.1.0",
    "pinecone>=8.1.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "supabase>=2.28.0",
]
